2004-04-17  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_get_name): Don't show database
	details such as password.
	(window_confirm_exit_run): Hack for now that removes the save
	button for database projects.

	* data/glade/sql.glade:
	* libplanner/mrp-sql.c: (sql_read_resources):
	* src/planner-sql-plugin.c: (sql_plugin_retrieve_project_id): Fix
	bug #136507, based on patch from Lincoln with further work from
	me.

2004-04-17  Setul Patel   <setulkumarpatel@yahoo.com>

	* data/ui/main-window.ui:
	* src/planner-window.c: Fix bug #134357.

2004-04-17  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-gantt-row.c: Undo code for task constraints, task
	movement and task indentation.

2004-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c: (gantt_row_get_bounds),
	(gantt_row_draw), (gantt_row_point): Fix bug #137581.

2004-04-16  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* data/stylesheets/mrproject2html.xsl: Commit patch from Chris
	Ladd to fix bug #129226, bug #135388 and bug #137243.

2004-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-view.c: (gantt_view_update_ui): Remove
	whitespace.
	
	* src/planner-resource-view.c: (resource_view_update_ui): Fix bug
	where we were trying to update the resource view bonobo ui while
	it was deactivated.

2004-04-15  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-ttable-row.c: (ttable_row_event): Removed the
	MOTION_NOTIFY event for read-only view.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c: (task_dialog_task_removed_cb),
	(planner_task_dialog_new): Use connect_object and fix the callback
	signature, fixes bug #140208.

2004-04-15  Richard Hult  <richard@imendio.com>

	* data/glade/html-output.glade: